# quantum-thermo

./: .gitignore  AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: channel.rs  entropy_quantum.rs  lib.rs  qubit.rs  resource.rs  thermal.rs  work.rs
